# ruddr

./: .flake8  .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: docs.yml  release.yml  test.yml
docs/: conf.py  development.rst  help.rst  howitworks.rst  index.rst  installation.rst  notifiers.rst  updaters.rst  usage.rst
docs/_static/: custom.css
ruddr/: __init__.py  addrfile.py  config.py  configuration.py  exceptions.py  manager.py  sdnotify.py
ruddr/notifiers/: __init__.py  _getifaceaddrs.py  iface.py  notifier.py  static.py  systemd.py  timed.py  web.py
ruddr/updaters/: __init__.py  duckdns.py  freedns.py  gandi.py  he.py  standard.py  updater.py
src/ruddr/: __init__.py  __main__.py  addrfile.py  configuration.py  exceptions.py  main.py  manager.py  restrictfamily.py
src/ruddr/notifiers/: __init__.py  iface.py  notifier.py  static.py  systemd.py  web.py
src/ruddr/updaters/: __init__.py  duckdns.py  freedns.py  gandi.py  he.py  standard.py  updater.py
src/ruddr/util/: __init__.py  getifaceaddrs.py  restrictfamily.py  sdnotify.py  zones.py
test/: conftest.py  doubles.py  mock_notifier.py  mock_updater.py  mocks.py  test_addrfile.py  test_configuration.py  test_manager.py  test_notifier.py  test_updater.py
test/notifier/: __init__.py  conftest.py  test_basenotifier.py  test_notifier.py
test/updater/: __init__.py  test_baseupdater.py  test_onewayupdater.py  test_twowayupdater.py  test_twowayzoneupdater.py  test_updater.py
